--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/btn_contacts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/contacts" />
