Add method getContacts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,6 @@
             android:id="@+id/container_contacts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal" />
+            android:orientation="vertical" />
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
